Cambiamenti a buyProduct.html TicketStore.sol admin_api.py

--- a/src/templates/buyProduct.html
+++ b/src/templates/buyProduct.html
@@ -54,15 +54,15 @@
                             </label>
                             <div class="form-group">
                             	<select class="form-control pb-2" required="" name="end_station" id = "endSelect"></select></div>
-                                    <button
-                                        class="btn btn-primary btn-block" type="button" id = "buyButton" disabled>PRENOTA</button>
+                                    <input
+                                        class="btn btn-primary btn-block" type="submit" value="PRENOTA" id = "buyButton" disabled></input>
                                         <div class="form-row justify-content-center align-items-center align-content-center" style="margin: 26px;">
                                             <h4 class="p-0 m-0 pb-3" style="color: rgb(230,167,86);" id="price">$ 4.50</h4>
                                         </div>
                         </div>
                         <div class="col text-center text-sm-center text-md-center text-lg-center text-xl-center"><img src="../static/assets/img/kisspng-event-tickets-raffle-transparency-airline-ticket-d-openingstijden-olaertsduyn-5d3d7baa328750.865723761564310442207.png" style="width: 328px;margin: 57px;"><label>Label</label></div>
                     </div>
-                    <input type="hidden" name="num_station" id="hiddenNumStation">
+                    <input type="hidden" name="station_num" id="hiddenNumStation">
                 </form>
             </div>
         </div>
