Add new html page to project

--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="../static/assets/css/gift-product-small-double.css">
 </head>
 
-<body style="background: linear-gradient(rgba(47, 23, 15, 0.65), rgba(47, 23, 15, 0.65)), url('../static/assets/img/bg.jpg');height: 957px;">
-    <h1 class="text-center text-white d-none d-lg-block site-heading" style="color: rgb(255,253,253);"><span class="text-primary site-heading-upper mb-3">A NEW WAY TO BUY TICKETS&nbsp;</span><span class="site-heading-lower">SHIBA TICKETS</span></h1>
+<body style="background: linear-gradient(rgba(47, 23, 15, 0.65), rgba(47, 23, 15, 0.65)), url('../static/assets/img/bg.jpg'); height: 957px;">
+    <h1 class="text-center text-white d-none d-lg-block site-heading" style="color: rgb(255,253,253);"><span class="text-primary site-heading-upper mb-3">A NEW WAY TO BUY TICKETS</span><span class="site-heading-lower">SHIBA TICKETS</span></h1>
     <nav class="navbar navbar-light navbar-expand-lg bg-dark py-lg-4" id="mainNav">
         <div class="container"><a class="navbar-brand text-uppercase d-lg-none text-expanded" href="#">TICKETS</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div
@@ -33,12 +33,12 @@
         <div class="container">
             <div class="product-item">
                 <div class="d-flex product-item-title"></div>
-                <form class="align-items-center" action="/refund" method="get">
+                <form class="align-items-center" action="/login_private_key" method="post">
                     <div class="form-row d-flex justify-content-center align-items-center p-0 m-0">
                         <div class="col-lg-6 col-xl-6 p-0 m-0 p-3" id="formConocimientos">
-                            <h4 class="p-0 m-0 pb-3" style="color: rgb(230,167,86);">Rimborsa il biglietto</h4><label style="color: rgb(246,247,248);">ID</label>
-                            <div class="form-group"><input class="form-control" type="text" name="ticket_id"></div><button class="btn btn-primary btn-block" type="button">RIMBORSA</button></div>
-                        <div class="col text-center text-sm-center text-md-center text-lg-center text-xl-center"><img src="../static/assets/img/pngaaa.com-429027.png" style="width: 328px;margin: 57px;"><label>Label</label></div>
+                            <h4 class="p-0 m-0 pb-3" style="color: rgb(230,167,86);">Log with your EHT account</h4><label style="color: rgb(246,247,248);">Mnemonic</label>
+                            <div class="form-group"><input class="form-control" name="" type="text"></div><input class="btn btn-primary btn-block" type="submit" value="LOG"></div>
+                        <div class="col text-center text-sm-center text-md-center text-lg-center text-xl-center"><img src="../static/assets/img/person.png" style="width: 328px;margin: 57px;"><label>Label</label></div>
                     </div>
                 </form>
             </div>
