--- a/src/templates/buyProduct.html
+++ b/src/templates/buyProduct.html
@@ -20,10 +20,11 @@
                 class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="nav navbar-nav mx-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="about.html">About us</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="products.html">Products</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="buyProduct.html">Buy</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="refund.html">Refund</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="about">About us</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="products">Products</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="buy_product">Buy</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="refund">Refund</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="login">Login</a></li>
                 </ul>
         </div>
         </div>
