--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -24,6 +24,7 @@
                     <li class="nav-item" role="presentation"><a class="nav-link" href="products">Products</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="buy_product">Buy</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="refund">Refund</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="login">Login</a></li>
                 </ul>
         </div>
         </div>
