--- a/src/templates/products.html
+++ b/src/templates/products.html
@@ -25,6 +25,7 @@
                     <li class="nav-item" role="presentation"><a class="nav-link" href="buy_product">Buy</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="refund">Refund</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="login">Login</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="admin">Admin</a></li>
                 </ul>
         </div>
         </div>
@@ -78,6 +79,7 @@
             <p class="m-0 small">Copyright&nbsp;©&nbsp;Brand 2022</p>
         </div>
     </footer>
+    <script src="../static/assets/js/utility.js"></script>
     <script src="../static/assets/js/jquery.min.js"></script>
     <script src="../static/assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="../static/assets/js/Animated-Pretty-Product-List-v12.js"></script>
