--- a/src/templates/refund.html
+++ b/src/templates/refund.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i">
     <link rel="stylesheet" href="../static/assets/css/Animated-Pretty-Product-List-v12.css">
     <link rel="stylesheet" href="../static/assets/css/gift-product-small-double.css">
+    <link rel="stylesheet" href="../static/assets/css/popup.css">
 </head>
 
 <body style="background: linear-gradient(rgba(47, 23, 15, 0.65), rgba(47, 23, 15, 0.65)), url('../static/assets/img/bg.jpg');height: 957px;">
@@ -25,6 +26,7 @@
                     <li class="nav-item" role="presentation"><a class="nav-link" href="buy_product">Buy</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="refund">Refund</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="login">Login</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="admin">Admin</a></li>
                 </ul>
         </div>
         </div>
@@ -37,11 +39,18 @@
                     <div class="form-row d-flex justify-content-center align-items-center p-0 m-0">
                         <div class="col-lg-6 col-xl-6 p-0 m-0 p-3" id="formConocimientos">
                             <h4 class="p-0 m-0 pb-3" style="color: rgb(230,167,86);">Rimborsa il biglietto</h4><label style="color: rgb(246,247,248);">ID</label>
-                            <div class="form-group"><input class="form-control" type="text" name="ticket_id"></div><button class="btn btn-primary btn-block" type="submit">RIMBORSA</button></div>
+                            <div class="form-group">
+                                <input class="form-control" type="text" pattern="[0-9]+" id="ticketId" name="ticket_id">
+                            </div><input class="btn btn-primary btn-block" id="refundBtn" type="submit">RIMBORSA</div>
                         <div class="col text-center text-sm-center text-md-center text-lg-center text-xl-center"><img src="../static/assets/img/pngaaa.com-429027.png" style="width: 328px;margin: 57px;"><label>Label</label></div>
                     </div>
                 </form>
             </div>
+        </div>
+        <div class="popupBox">
+            <span class="closeButton">&times;</span>
+            <strong class="type"></strong> <!--riempito dinamicamente con lo pseudo-elemento ::after-->
+            <span class="msgContent">Default text.</span>
         </div>
     </section>
     <footer class="footer text-faded text-center py-5">
@@ -49,6 +58,25 @@
             <p class="m-0 small">Copyright&nbsp;©&nbsp;Brand 2022</p>
         </div>
     </footer>
+    <script src="../static/assets/js/utility.js"></script>
+    <script>
+        $("#refundBtn").on("click", ev => {
+            ev.preventDefault();
+            $.ajax("refund_ticket?ticket_id=" + $("#ticketId").val(), {
+                method: "GET",
+                error: responseObject => {
+                    let msg = responseObject.message;
+                    let type = "error";
+                    showPopupMessage(type, msg);
+                },
+                success: responseObject => {
+                    let msg = responseObject.message;
+                    let type = "success";
+                    showPopupMessage(type, msg);
+                }
+            });
+        });
+    </script>
     <script src="../static/assets/js/jquery.min.js"></script>
     <script src="../static/assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="../static/assets/js/Animated-Pretty-Product-List-v12.js"></script>
