--- a/src/templates/indexDiTruffle.html
+++ b/src/templates/indexDiTruffle.html
@@ -45,7 +45,7 @@
         </div>
       </div>
     </div>
-
+    <script src="../static/assets/js/utility.js"></script>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
