--- a/src/templates/product_form.html
+++ b/src/templates/product_form.html
@@ -20,13 +20,13 @@
             <div
                 class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="nav navbar-nav mx-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="about">About us</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="products">Products</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="buy_product">Buy</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="refund">Refund</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="login">Login</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="admin">Admin</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="/index.html">Home</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="/about">About us</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="/products">Products</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="/buy_product">Buy</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="/refund">Refund</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="/login">Login</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="/admin">Admin</a></li>
                 </ul>
         </div>
         </div>
