--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -1,36 +1,9 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Products - Brand</title>
-    <link rel="stylesheet" href="../static/assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i">
-    <link rel="stylesheet" href="../static/assets/css/Animated-Pretty-Product-List-v12.css">
-    <link rel="stylesheet" href="../static/assets/css/gift-product-small-double.css">
-    <link rel="stylesheet" href="../static/assets/css/popup.css">
-</head>
-
-<body style="background: linear-gradient(rgba(47, 23, 15, 0.65), rgba(47, 23, 15, 0.65)), url('../static/assets/img/bg.jpg');height: 957px;">
-    <h1 class="text-center text-white d-none d-lg-block site-heading" style="color: rgb(255,253,253);"><span class="text-primary site-heading-upper mb-3">A NEW WAY TO BUY TICKETS&nbsp;</span><span class="site-heading-lower">SHIBA TICKETS</span></h1>
-    <nav class="navbar navbar-light navbar-expand-lg bg-dark py-lg-4" id="mainNav">
-        <div class="container"><a class="navbar-brand text-uppercase d-lg-none text-expanded" href="#">TICKETS</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-            <div
-                class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="nav navbar-nav mx-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="about">About us</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="products">Products</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="buy_product">Buy</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="refund">Refund</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="login">Login</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="admin">Admin</a></li>
-                </ul>
-        </div>
-        </div>
-    </nav>
+{% include 'head.html' %}
+<body style="background:linear-gradient(rgba(47, 23, 15, 0.65), rgba(47, 23, 15, 0.65)), url('../static/assets/img/bg.jpg');">
+    {% include 'header.html' %}
     <section class="page-section">
         <div class="container">
             <div class="product-item">
