--- a/src/templates/head.html
+++ b/src/templates/head.html
@@ -7,4 +7,5 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i">
     <link rel="stylesheet" href="../static/assets/css/Animated-Pretty-Product-List-v12.css">
     <link rel="stylesheet" href="../static/assets/css/gift-product-small-double.css">
+    <link rel="stylesheet" href="../static/assets/css/popup.css">
 </head>
