--- a/src/templates/product_form.html
+++ b/src/templates/product_form.html
@@ -1,41 +1,15 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Products - Brand</title>
-    <link rel="stylesheet" href="../static/assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i">
-    <link rel="stylesheet" href="../static/assets/css/Animated-Pretty-Product-List-v12.css">
-    <link rel="stylesheet" href="../static/assets/css/gift-product-small-double.css">
-    <link rel="stylesheet" href="../static/assets/css/popup.css">
-</head>
+{% include 'head.html' %}
 
 <body style="background: linear-gradient(rgba(47, 23, 15, 0.65), rgba(47, 23, 15, 0.65)), url('../static/assets/img/bg.jpg');height: 957px;">
-    <h1 class="text-center text-white d-none d-lg-block site-heading" style="color: rgb(255,253,253);"><span class="text-primary site-heading-upper mb-3">A NEW WAY TO BUY TICKETS&nbsp;</span><span class="site-heading-lower">SHIBA TICKETS</span></h1>
-    <nav class="navbar navbar-light navbar-expand-lg bg-dark py-lg-4" id="mainNav">
-        <div class="container"><a class="navbar-brand text-uppercase d-lg-none text-expanded" href="#">TICKETS</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-            <div
-                class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="nav navbar-nav mx-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="/index.html">Home</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="/about">About us</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="/products">Products</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="/buy_product">Buy</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="/refund">Refund</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="/login">Login</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="/admin">Admin</a></li>
-                </ul>
-        </div>
-        </div>
-    </nav>
+    {% include 'header.html' %}
     <section class="page-section">
         <div class="container">
             <div class="product-item">
                 <div class="d-flex product-item-title"></div>
-                <form class="align-items-center" action="/admin/remove_admin" method="get" style="margin: 0px;margin-top: 8px;">
+                <!--<form class="align-items-center" action="/admin/remove_admin" method="get" style="margin: 0px;margin-top: 8px;">
                     <div class="form-row d-flex justify-content-center align-items-center p-0 m-0">
                         <div class="col-lg-6 col-xl-6 p-0 m-0 p-3" id="formConocimientos">
                             <h4 class="p-0 m-0 pb-3" style="color: rgb(230,167,86);">Register admin account</h4>
@@ -46,54 +20,31 @@
                             <button class="btn btn-primary btn-block" id="promoteBtn" type="submit">REGISTER</button>
                         </div>
                     </div>
-                </form>
-                <!--
-                <form class="align-items-center" action="/admin/remove_admin" method="get" style="margin: 0px;margin-top: 8px;">
-                    <div class="form-row d-flex justify-content-center align-items-center p-0 m-0">
-                        <div class="col-lg-6 col-xl-6 p-0 m-0 p-3" id="formConocimientos4">
-                            <h4 class="p-0 m-0 pb-3" style="color: rgb(230,167,86);">Remove admin account</h4>
-                            <label for="address_to_remove_admin" style="color: rgb(246,247,248);">Address</label>
-                            <div class="form-group">
-                                <input class="form-control" id="address_to_remove_admin" name="address" type="text">
-                            </div>
-                            <button class="btn btn-primary btn-block" id="removeAdminBtn" type="submit">REMOVE</button>
-                        </div>
-                    </div>
-                </form> -->
-                <form class="align-items-center" action="/admin/register_ticket_usage_setter" method="get" style="margin-top: 20px;">
-                    <div class="form-row d-flex justify-content-center align-items-center p-0 m-0">
-                        <div class="col-lg-6 col-xl-6 p-0 m-0 p-3" id="formConocimientos1">
-                            <h4 class="p-0 m-0 pb-3" style="color: rgb(230,167,86);">Register usage setter account</h4>
-                            <label for="create_usage_setter_addr" style="color: rgb(246,247,248);">Address</label>
-                            <div class="form-group">
-                                <input class="form-control" id="create_usage_setter_addr" name="address" type="text">
-                            </div>
-                            <button class="btn btn-primary btn-block" id="registerUsageSetterBtn" type="submit">REGISTER</button>
-                        </div>
-                    </div>
-                </form>
-                <!--
-                <form class="align-items-center" action="/admin/remove_ticket_usage_setter" method="get" style="margin-top: 20px;">
-                    <div class="form-row d-flex justify-content-center align-items-center p-0 m-0">
-                        <div class="col-lg-6 col-xl-6 p-0 m-0 p-3" id="formConocimientos3">
-                            <h4 class="p-0 m-0 pb-3" style="color: rgb(230,167,86);">Remove usage setter account</h4>
-                            <label for="remove_usage_setter_addr" style="color: rgb(246,247,248);">Address</label>
-                            <div class="form-group">
-                                <input class="form-control" id="remove_usage_setter_addr" name="address" type="text">
-                            </div>
-                            <button class="btn btn-primary btn-block" id="removeUsageSetterBtn" type="submit">REMOVE</button>
-                        </div>
-                    </div>
-                </form> -->
-                <form class="align-items-center" action="/admin/withdraw" method="get" style="margin-top: 20px;">
-                    <div class="form-row d-flex justify-content-center align-items-center p-0 m-0">
-                        <div class="col-lg-6 col-xl-6 p-0 m-0 p-3" id="formConocimientos2">
-                            <h4 class="p-0 m-0 pb-3" style="color: rgb(230,167,86);">Transfer founds</h4><label style="color: rgb(246,247,248);">Address</label>
-                            <div class="form-group">
-                                <input class="form-control" id="address_to_deposit" name="address" type="text">
-                            </div>
-                            <button id="withdrawBtn" class="btn btn-primary btn-block" type="submit">WITHDRAW</button></div>
-                    </div>
+                </form>-->
+                <form style="color: white">
+                  <div class="form-group">
+                    <label for="origin">Origin</label>
+                    <input type="text" class="form-control" id="origin" aria-describedby="originHelp" placeholder="Origin City">
+                    <small id="originHelp" class="form-text text-muted">The city of origin.</small>
+                  </div>
+
+                  <div class="form-group">
+                    <label for="destination">Destination</label>
+                    <input type="text" class="form-control" id="origin" aria-describedby="destinationHelp" placeholder="Destination City">
+                    <small id="destinationHelp" class="form-text text-muted">The destination city.</small>
+                  </div>
+
+                  <div class="form-group">
+                    <label for="start_date">Departure Date and Time</label>
+                    <input type="datetime-local" value="2018-06-12T19:30" class="form-control" id="start_date" aria-describedby="start_dateHelp" placeholder="Departure Date and Time">
+                    <small id="start_dateHelp" class="form-text text-muted">The departure date and time.</small>
+                  </div>
+
+                  <div class="form-check">
+                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                    <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                  </div>
+                  <button type="submit" class="btn btn-primary">Submit</button>
                 </form>
             </div>
         </div>
@@ -115,6 +66,7 @@
     <script src="../static/assets/js/current-day.js"></script>
     <script src="../static/assets/js/formModifier.js"></script>
     <script src="../static/assets/js/adminPage.js"></script>
+    <!--<script src="../static/assets/js/date_picker.js"></script>-->
 </body>
 
 </html>
